# ccg

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
cmake/: CompilerDefinitions.cmake  CompilerOptions.cmake  CompilerWarnings.cmake  DefaultSettings.cmake  Dependencies.cmake  DetectPlatform.cmake  InterfaceTargets.cmake  ProjectOptions.cmake  StandardSettings.cmake
example/: CMakeLists.txt  CMakePresets.json  config.ccg.json  input.ccg.json
example/cmake/: InstallCCG.cmake
example/src/: main.cpp
example/templates/: enum.cpp.jinja  enum.hpp.jinja  generated-message.jinja
scripts/: build-all.sh  build.sh  clean-all.sh
src/: CMakeLists.txt
src/app/: CMakeLists.txt
src/app/src/: main.cpp
src/cmake/: CMakeLists.txt  ccg-config.cmake  ccg-functions.cmake
src/lib/: CMakeLists.txt
src/lib/src/ccg/: Config.cpp  Config.hpp  Context.cpp  Context.hpp  Generate.cpp  Generate.hpp  Input.cpp  Input.hpp  InputData.cpp  InputData.hpp  Logging.cpp  Logging.hpp  Macros.cpp  Macros.hpp  Run.cpp  Run.hpp
src/tests/: CMakeLists.txt
src/tests/src/ccg/: ConfigTests.cpp  DebugHelpers.cpp  DebugHelpers.hpp  InputTests.cpp  MacrosTests.cpp
